Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashboard.com # this needs to be mapped to the address that will be allocated when this is applied in /etc/hostss
      http:
        paths:
        - backend:
            serviceName: kubernetes-dashboard
            servicePort: 80
